--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "api-sharp",
-  "version": "1.0.0",
+  "name": "rio-image-converter",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,8 +15,10 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "postgres": "^1.0.2",
     "sharp": "^0.25.2",
